# md-fixup

./: .gitignore  LICENSE.txt  README.md  test_code_span.md  test_existing_refs.md  test_final_underscore.md  test_links2.md  test_list_fix.md  test_nested.md  test_nested_list.md  test_numeric_conflict2.md  test_order.md  test_replacements.md
.github/workflows/: ci.yml  publish-cargo.yml  release.yml
Formula/: md-fixup.rb
python/: md-fixup.py  test_md_fixup.py  test_table_wrapping.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
tests/fixtures/: complete.md  emphasis.md  empty-lines.md  frontmatter.md  link-expectation.md  links.md  replacements.yml  young-markdown.md  young-replacements.yml
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
